--- a/alx-react-app-new/package.json
+++ b/alx-react-app-new/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alx-react-app",
+  "name": "alx-react-app-new",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -22,6 +22,9 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
-    "vite": "^7.1.7"
+    "vite": "npm:rolldown-vite@7.1.14"
+  },
+  "overrides": {
+    "vite": "npm:rolldown-vite@7.1.14"
   }
 }
